--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@ ul {
   margin: 0;
   padding: 0;
   background-color: #333;
+  overflow: hidden;
 }
 
 li {
-  float: left;
+  display: inline-block;
 }
 
 li a {
