--- a/style.css
+++ b/style.css
@@ -1,23 +1,22 @@
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  background-color: #333;
-  overflow: hidden;
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
 }
 
-li {
-  display: inline-block;
+.menu {
+    background-color: #333;
+    overflow: hidden;
 }
 
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
+.menu-item {
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
 }
 
-li a:hover {
-  background-color: #111;
+.menu-item:hover {
+    background-color: #111;
 }
